[ADD]: Added waitlist embed copy button. and fixed dashboard controller